# fast_io_tools

./: .gitignore  heapsize.cc  intrin.txt  nt_io_ring.h  sanitizer.txt  streamimpl.h  win32_heapalloc.h  win32_io_ring.h
afpf/: domain.h  general.cc  port.h  protocal.h  result.h  simple.cc  socket_domain.cc  token.h
algos/: algo.cc
alloc/: test.cc
cipherbackup/: aes.h  block_cipher.h  cbc.h  chacha20.h  ctr.h  ecb.h  gcm.h  gmac.h  parrallel_ctr.h  rc6.h  speck.h  symmetric_crypto.h  xor.h
console/: fast_io_device.h  native_base.h  posix.h  win32_console.h
crypto_hash/: generate_sha_meta_info.cc
dragonbox/: common.h  dragonbox.h  easy_cases.h  large_int.h  main.cc  rounding.h  ryu.h
dragonbox_tblgen/: tblgen.cc
error/: error.h  error_value.txt  generate_win32_to_errno.cc  test_error.cc  win32_error_to_errno.h
gdi/: gdi.cc  opengl.cc  vulkan-1.def  win32gdi.h
gg/: compile_time.h  union_test.cc
gui/: test.cc
hash/: md5.h
hex/: hex_method.h
http/: http_header.h
i18n/: existing.txt  (+4 more)
i18n/l10n/: CMakeLists.txt  era.h  parse_locale_data.cc  parsing.h  pch.hpp
i18n/l10n/localedata/: dz_BT  ti_ER  ti_ET  zh_CN  zh_TW
i18n/l10n/result/: C.cc  POSIX.cc  aa_DJ.cc  aa_ER.cc  aa_ER@saaho.cc  aa_ET.cc  af_ZA.cc  agr_PE.cc  ak_GH.cc  am_ET.cc  an_ES.cc  anp_IN.cc  ar_AE.cc  ar_BH.cc  ar_DZ.cc  ar_EG.cc  ar_IN.cc  ar_IQ.cc  ar_JO.cc  ar_KW.cc  ar_LB.cc  ar_LY.cc  ar_MA.cc  ar_OM.cc  ar_QA.cc  ar_SA.cc  ar_SD.cc  ar_SS.cc  ar_SY.cc  ar_TN.cc  ar_YE.cc  as_IN.cc  ast_ES.cc  ayc_PE.cc  az_AZ.cc  az_IR.cc  be_BY.cc  be_BY@latin.cc  bem_ZM.cc  ber_DZ.cc  (+299 more)
(+207 files in other folders)
